<resources>
    <string name="app_name">calculadora_android</string>
    <string name="text_delete_button"><![CDATA[<-]]></string>
    <string name="text_value0_button">0</string>
    <string name="text_dot_button">,</string>
    <string name="text_result_button">=</string>
    <string name="text_value2_button">2</string>
    <string name="text_value4_button">4</string>
    <string name="text_value3_button">3</string>
    <string name="text_value1_button">1</string>
    <string name="text_value5_button">5</string>
    <string name="text_value6_button">6</string>
    <string name="text_value7_button">7</string>
    <string name="text_value8_button">8</string>
    <string name="text_value9_button">9</string>
    <string name="text_addition_button">+</string>
    <string name="text_substraction_button">-</string>
    <string name="text_multiplication_button">x</string>
    <string name="text_bracket_button">( )</string>
    <string name="text_percent_button">%</string>
    <string name="text_div_button">/</string>
    <string name="text_clear_button">AC</string>
    <string name="default_inputText">0</string>
    <string name="guardar">Guardar</string>
    <string name="historial">Historial</string>
</resources>