<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/delete_button"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginTop="24dp"
        android:onClick="buttonDelete"
        android:text="@string/text_delete_button"
        app:layout_constraintEnd_toStartOf="@+id/result_button"
        app:layout_constraintStart_toEndOf="@+id/dot_button"
        app:layout_constraintTop_toBottomOf="@+id/value3_button" />

    <Button
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/value0_button"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:onClick="button0"
        android:text="@string/text_value0_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/dot_button"
        app:layout_constraintEnd_toStartOf="@+id/dot_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/dot_button"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginEnd="24dp"
        android:onClick="buttonDot"
        android:text="@string/text_dot_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/delete_button"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        app:layout_constraintStart_toEndOf="@+id/value0_button" />

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/result_button"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:onClick="buttonResult"
        android:text="@string/text_result_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delete_button" />

    <Button
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/value2_button"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginEnd="24dp"
        android:onClick="button2"
        android:text="@string/text_value2_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/value3_button"
        app:layout_constraintEnd_toStartOf="@+id/value3_button"
        app:layout_constraintStart_toEndOf="@+id/value1_button" />

    <Button
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/value4_button"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:onClick="button4"
        android:text="@string/text_value4_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/value5_button"
        app:layout_constraintEnd_toStartOf="@+id/value5_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addition_button"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:onClick="buttonAddition"
        android:text="@string/text_addition_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/value3_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/value3_button" />

    <Button
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/value3_button"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginTop="24dp"
        android:onClick="button3"
        android:text="@string/text_value3_button"
        app:layout_constraintEnd_toStartOf="@+id/addition_button"
        app:layout_constraintStart_toEndOf="@+id/value2_button"
        app:layout_constraintTop_toBottomOf="@+id/value6_button" />

    <Button
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/value1_button"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:onClick="button1"
        android:text="@string/text_value1_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/value2_button"
        app:layout_constraintEnd_toStartOf="@+id/value2_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/value5_button"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginEnd="24dp"
        android:onClick="button5"
        android:text="@string/text_value5_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/value6_button"
        app:layout_constraintEnd_toStartOf="@+id/value6_button"
        app:layout_constraintStart_toEndOf="@+id/value4_button" />

    <Button
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/value6_button"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginTop="24dp"
        android:onClick="button6"
        android:text="@string/text_value6_button"
        app:layout_constraintEnd_toStartOf="@+id/substraction_button"
        app:layout_constraintStart_toEndOf="@+id/value5_button"
        app:layout_constraintTop_toBottomOf="@+id/value9_button" />

    <Button
        android:id="@+id/substraction_button"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:onClick="buttonSubstraction"
        android:text="@string/text_substraction_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/value6_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/value6_button" />

    <Button
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/value7_button"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:onClick="button7"
        android:text="@string/text_value7_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/value8_button"
        app:layout_constraintEnd_toStartOf="@+id/value8_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/value8_button"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginEnd="24dp"
        android:onClick="button8"
        android:text="@string/text_value8_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/value9_button"
        app:layout_constraintEnd_toStartOf="@+id/value9_button"
        app:layout_constraintStart_toEndOf="@+id/value7_button" />

    <Button
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/value9_button"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginTop="24dp"
        android:onClick="button9"
        android:text="@string/text_value9_button"
        app:layout_constraintEnd_toStartOf="@+id/multiplication_button"
        app:layout_constraintStart_toEndOf="@+id/value8_button"
        app:layout_constraintTop_toBottomOf="@+id/percent_button" />

    <Button
        android:id="@+id/multiplication_button"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:onClick="buttonMultiplication"
        android:text="@string/text_multiplication_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/value9_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/value9_button" />


    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.Material3.CardView.Filled"
        android:id="@+id/inout_CardView"
        android:layout_width="match_parent"
        android:layout_height="222dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:checkable="false"
        android:clickable="false"
        android:focusable="false"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/input_text"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:autoSizeMaxTextSize="64sp"
            android:autoSizeMinTextSize="24sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:gravity="end"
            android:hint="0"
            android:maxLines="2"
            android:textSize="64sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/output_text"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="119dp"
            android:autoSizeMaxTextSize="64sp"
            android:autoSizeMinTextSize="24sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:gravity="end"
            android:maxLines="1"
            android:textSize="64sp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/historicalCardView"
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="match_parent"
        android:layout_height="222dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:checkable="false"
        android:clickable="false"
        android:focusable="false"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    </com.google.android.material.card.MaterialCardView>


    <Button
        android:id="@+id/bracket_button"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginEnd="24dp"
        android:onClick="buttonBracket"
        android:text="@string/text_bracket_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/percent_button"
        app:layout_constraintEnd_toStartOf="@+id/percent_button"
        app:layout_constraintStart_toEndOf="@+id/clearAll_button" />

    <Button
        android:id="@+id/percent_button"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginTop="24dp"
        android:onClick="buttonPercent"
        android:text="@string/text_percent_button"
        app:layout_constraintEnd_toStartOf="@+id/division_button"
        app:layout_constraintStart_toEndOf="@+id/bracket_button"
        app:layout_constraintTop_toBottomOf="@+id/historical_button" />

    <Button
        android:id="@+id/division_button"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:onClick="buttonDivision"
        android:text="@string/text_div_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/percent_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/percent_button" />

    <Button
        android:id="@+id/clearAll_button"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autoSizeTextType="none"
        android:onClick="buttonClearAll"
        android:text="@string/text_clear_button"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/bracket_button"
        app:layout_constraintEnd_toStartOf="@+id/bracket_button"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/save_button"
        android:layout_width="169dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/guardar"
        app:layout_constraintBaseline_toBaselineOf="@+id/historical_button"
        app:layout_constraintEnd_toStartOf="@+id/historical_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/historical_button"
        android:layout_width="169dp"
        android:layout_height="63dp"
        android:layout_marginTop="294dp"
        android:layout_marginEnd="24dp"
        android:text="@string/historial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/save_button"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_begin="294dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>